[gd_scene load_steps=13 format=2]

[ext_resource path="res://res/UI/Shop UI/power up page/power_ups_page.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Store Switcher.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Power-ups Page Store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 360, 351 )
scale = Vector2( 0.734, 0.738 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 127.0
margin_bottom = 41.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Button2" type="Button" parent="."]
margin_left = 1.0
margin_top = 44.0
margin_right = 127.0
margin_bottom = 94.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Button3" type="Button" parent="."]
margin_left = 1.0
margin_top = 98.0
margin_right = 127.0
margin_bottom = 147.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Button4" type="Button" parent="."]
margin_left = 616.0
margin_top = 656.0
margin_right = 718.0
margin_bottom = 700.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button4_button_down"]
